auch MELD-teil verbessert

--- a/diplomarbeit/sections/ch3_implementierung/web-app/evaluierung.tex
+++ b/diplomarbeit/sections/ch3_implementierung/web-app/evaluierung.tex
@@ -26,15 +26,15 @@ Es ist sehr einfach, mit CSS inkonsistenten und unnötigen Code zu schreiben, we
 Bevor es an das eigentliche Erstellen von Code geht sollte man vorab immer das vorgegebene Design überprüfen, ein technisches Konzept erstellen und hierbei vor allem auf logische Verknüpfungen im Code achten. Das bedeutet konkret, dass die Styles des Kunden (bzw. deren Corporate Identity) in die Webseite eingeplant, die Basis der Typographie der Webseite erstellt, und Styles für die komplette Webseite bzw für spezifische Sektionen erstellt werden müssen.
 
 \textbf{Tools und Frameworks\newline}
-In manchen Fällen ist die Verwendung von CSS-Libariessehr hilfreich. Diese sollten aber aus einem guten Grund gewällt werden. Auch hier gibt es wiederum viele Arten von Tools die Verwendet werden können \cite{MELD.CH3-web-app.css3}. Einige können als eigene, bessere Sprachen angesehen werden, welche sich dann einfach zu CSS konvertieren, Andere reduzieren den bereits vorhanden Code auf das Minimum.
+In manchen Fällen ist die Verwendung von CSS-Libaries sehr hilfreich. Diese sollten aber aus einem guten Grund gewählt werden. Auch hier gibt es wiederum viele Arten von Tools, die Verwendet werden können \cite{MELD.CH3-web-app.css3}. Einige können als eigene, bessere Sprachen angesehen werden, welche sich dann einfach zu CSS konvertieren, Andere reduzieren den bereits vorhanden Code auf das Minimum.
 
-Vorgefertigte UI Komponenten oder CSS Frameworks können ebenfalls sehr hilfreich sein \cite{MELD.CH3-web-app.css3}, aber auch hier gilt: nur verwenden, wenn wirklich notwendig. Wiederum gibt es verschiedene Kategorien von Frameworks die für verschiedenstes verwendet werden können: UI Komponenten oder Widget libraries (z.B. Bootstrap, jQuery UI), Grid Systems, Typographie Anpassungen, Normalisierung von Code.
+Vorgefertigte UI Komponenten oder CSS Frameworks, können ebenfalls sehr hilfreich sein \cite{MELD.CH3-web-app.css3}, aber auch hier gilt: nur verwenden, wenn wirklich notwendig. Wiederum gibt es verschiedene Kategorien von Frameworks die für verschiedenstes verwendet werden können: UI Komponenten oder Widget libraries (z.B. Bootstrap, jQuery UI), Grid Systems, Typographie Anpassungen, Normalisierung von Code.
 
 
 \item[JavaScript\newline]
-beschreibt zusätzliche Verhaltensweisen, Features und Funktionalität welche normalerweise nicht von Web Browsern durch den Einsatz von CSS du HTML unterstützt werden. In den letzten Jahren hat JavaScript einen enormen Boom erhalten \cite{MELD.CH3-web-app.js2}. Dies ist aufgrund der immer größeren Anzahl an Features, schnelleren Browsern und Server Laufzeitumgebungen wie Node.js \cite{MELD.CH3-web-app.js1}. 
+beschreibt zusätzliche Verhaltensweisen, Features und Funktionalität, welche normalerweise nicht von Web Browsern durch den Einsatz von CSS und HTML unterstützt werden. In den letzten Jahren hat JavaScript einen enormen Boom erhalten \cite{MELD.CH3-web-app.js2}. Dies ist aufgrund der immer größeren Anzahl an Features, schnelleren Browsern und Server Laufzeitumgebungen wie Node.js, welche stetig auf den letzten Standpunkt gebracht werden \cite{MELD.CH3-web-app.js1}. 
 
-Es gibt mittlerweile für beinahe jede Komponente einer Website die man sich vorstellen kann eine JavaScript Library oder Framework \cite{MELD.CH3-web-app.js3}. Man sollte dennoch nur dann JavaScript verwenden, wenn keine andere Möglichkeit existiert.  Sollte der Fall eintreten, und es wirklich keine native Funktion durch CSS/HTML geben, muss die JavaScript Komponente auf Performance getestet werden. Auch hier gilt es dann möglichst schnellen, effizienten und performanten, wiederverwendbaren Code zu generieren. 
+Es gibt mittlerweile für beinahe jede Komponente einer Website, eine JavaScript Library oder Framework \cite{MELD.CH3-web-app.js3}. Man sollte dennoch nur dann JavaScript verwenden, wenn keine andere Möglichkeit existiert.  Sollte der Fall eintreten, und es wirklich keine native Funktion durch CSS/HTML gibt, muss die JavaScript Komponente auf Performance getestet werden. Auch hier gilt es dann möglichst schnellen, effizienten und performanten, wiederverwendbaren Code zu generieren. 
 
 Für die Auswahl von Third Party Projekten oder Code sollten folgende Punkte bei der Überlegung eingebunden werden:
 \begin{enumerate}
