--- a/diplomarbeit/sections/ch1_introduction/co2-umwelt.tex
+++ b/diplomarbeit/sections/ch1_introduction/co2-umwelt.tex
@@ -1,5 +1,6 @@
 \subsection{Umweltbelastung durch \ce{CO2} Ausstoß}
 \lfoot{Autor: Hüseyin Bozkurt}
+\label{subsec:umweltbelastungco2}
 
 \subsubsection{Definition und Entstehung}
 Kohlenstoffdioxid (\ce{CO2}) ist ein unsichtbares, geruchsloses Gas bestehend aus einem Kohlenstoff und zwei Sauerstoff-Atomen. 
