--- a/diplomarbeit/sections/ch1_introduction/fahrstil-analyse.tex
+++ b/diplomarbeit/sections/ch1_introduction/fahrstil-analyse.tex
@@ -35,9 +35,7 @@ Der Normzyklus ist insbesondere aufgrund des VW-Skandals bekannt geworden. Es er
 \paragraph{Carnot-Prozess}
 \todo{sanfter Einführen, wofür brauchen wir den Carnot Prozess}
 In diesem musste in Erfahrung gebracht werden, wie ein Motor funktioniert und welche Faktoren diesen beeinflussen. Vor allem ist dabei der Motorwirkungsgrad herausgestochen, welcher mit dem Carnot Prozess definiert ist. Dieser bestimmt wie viel Energie der Motor pro eingespritztem Kraftstoff definiert und ist damit bestimmt damit die Leistung die ein Motor emitiert. Ursprünglich war der Carnot Prozess definiert um einen Kreisprozess zu erläutern und wurde konnte folglich auch auf Motoren angewandt werden.
-Der Motorwirkungsgrad nach dem Carnot-Prozess, wird für bekannte Schaltvorschläge in Serienfahrzeugen meist noch nicht verwendet. Der Carnot-Prozess beschreibt die Errechnung des \textit{theoretisch möglichen} Motorwirkungsgrad, ohne dem Hinzuziehen von natürlichen Einflussgrößen. Diese können u.a. Reibung, Temperatur und Dichte sein \cite{SIMR.CH1-Fahrstil-Analyse.CarnotWirkungsgrad}. Genauere Ausführungen zu diesem Thema können im Kaptiel 2.1.2 - Thermodynamik gefunden werden. 
+Der Motorwirkungsgrad nach dem Carnot-Prozess, wird für bekannte Schaltvorschläge in Serienfahrzeugen meist noch nicht verwendet. Der Carnot-Prozess beschreibt die Errechnung des \textit{theoretisch möglichen} Motorwirkungsgrad, ohne dem Hinzuziehen von natürlichen Einflussgrößen. Diese können u.a. Reibung, Temperatur und Dichte sein \cite{SIMR.CH1-Fahrstil-Analyse.CarnotWirkungsgrad}. Genauere Ausführungen zu diesem Thema können im Kaptiel \ref{subsec:motorwirkungsgrad} gefunden werden. 
 
 \subsubsection{Schadstoffausstoß}
-Eine Live-Messung von \ce{CO2} Werten während der Fahrt ist zumeist eine Schätzung, welche durch den Bordcomputer durchgeführt wird und noch bei wenigen Modellen Einsatz findet. Grenzwerte oder gar eine Analysefunktionalität gibt es in dieser Hinsicht aber nicht. Die \ce{CO2} Werte werden in Zukunft allerdings noch weitaus relevanter. Denn, wie im folgenden Kapitel (1.2 - Umweltbelastung durch \ce{CO2} Ausstoß) ausführlich beschrieben, wird bis 2020 versucht wird einen Durschnittsaustoß von 95 g/km zu erzielen. \cite{SIMR.CH1-Fahrstil_Analyse.EUVerordCO2} Deshalb wurde die Zukunftssicherheit momentaner Bordcomputer in dieser Hinsicht bemängelt.
-
-\clearpage % DO NOT REMOVE
+Eine Live-Messung von \ce{CO2} Werten während der Fahrt ist zumeist eine Schätzung, welche durch den Bordcomputer durchgeführt wird und noch bei wenigen Modellen Einsatz findet. Grenzwerte oder gar eine Analysefunktionalität gibt es in dieser Hinsicht aber nicht. Die \ce{CO2} Werte werden in Zukunft allerdings noch weitaus relevanter. Denn, wie im folgenden Kapitel \ref{subsec:umweltbelastungco2} ausführlich beschrieben, wird bis 2020 versucht wird einen Durschnittsaustoß von 95 g/km zu erzielen. \cite{SIMR.CH1-Fahrstil_Analyse.EUVerordCO2} Deshalb wurde die Zukunftssicherheit momentaner Bordcomputer in dieser Hinsicht bemängelt.
