--- a/diplomarbeit/sections/ch1_introduction/main.tex
+++ b/diplomarbeit/sections/ch1_introduction/main.tex
@@ -1,3 +1,4 @@
+\lfoot{Autoren: Tobias Perny \& Hüseyin Bozkurt}
 \section{Einführung}
 \label{sec:intro}
 
@@ -8,7 +9,7 @@
 	\label{fig:konzept1}
 \end{figure}
 
-Abbildung \ref{fig:konzept1} zeigt wie die einzelnen Komponenten des BestShift Systems miteinaner interagieren. Das System hat letzendlich folgende Aufgaben zu erfüllen:
+Abbildung \ref{fig:konzept1} zeigt wie die einzelnen Komponenten des BestShift Systems miteinander interagieren. Das System hat letzendlich folgende Aufgaben zu erfüllen:
 
 \begin{itemize}
 	\item Echtzeit Messung und Errechnung der Beschleunigungskräfte, des Schadstoffausstoßes und eines Schaltvorschlags mittels der OBD-II Schnittstelle
