--- a/diplomarbeit/sections/ch2_technische_grundlagen/can-bus/thermodynamik.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/can-bus/thermodynamik.tex
@@ -5,18 +5,21 @@
 \textbf{Einführung\newline}
 Grundsätzlich beschäftigten wie uns mit dem Motorwirkungsgrad, um feststellen zu können, welcher Schaltpunkt möglichst effizient bezüglich des Motorwirkungsgrads ist. Denn es gibt unterschiedliche Wirkungsgrade, deshalb heißt ein niedriger Spritverbrauch (Motorwirkungsgrad) nicht gleichzeitig ein niedriger \ce{CO2}-Ausstoß. Der Katalysator hat also einen eigenen Wirkungsgrad, welcher für diese Rechnung einbezogen werden muss. Für das Diplomprojekt beschlossen wir den Motorwirkungsgrad in den Fokus zu setzen.
 
-\textbf{\newline Heutige Probleme durch die Öl-Förderung}
-\begin{wrapfigure}{r}{0.6\textwidth}\centering
+\textbf{Heutige Probleme durch die Öl-Förderung}
+
+\begin{figure}
+	\centering
     \includegraphics[width=0.6\textwidth]{images/bpOilSpillSatelite}
     \caption{1 Monat nach der Explosion \cite{SIMR.CH2-motorwirkungsgrad.bpOilSpillSatelite}} \label{Fig:imgBPOilSpill}
-\end{wrapfigure}
+\end{figure}
+
 Dieses Thema ist besonders in Bezug auf die immer restriktiveren Emissionsbestimmungen und die häufig hohen Kraftstoffpreise von Interesse für Autofahrer. Zusätzlich sind fossile Brennstoffe, bekanntlich, nicht erneuerbare Ressourcen, weshalb die Vorkommen zeitnah erschöpft sein werden. Genau deshalb ist es besonders wichtig sparsam und ökonomisch mit der bald erschöpften Ressource Erdöl umzugehen. 
 Denn die Öl-Förderung erzeugt schon heute Naturkatastrophen und Umweltverschmutzung und wird immer schwerer zu erlangen.
 Naturkatastrophen wie BP's \textit{Deepwater Horizon} Ölpest aus dem Jahre 2010 \cite{SIMR.CH2-motorwirkungsgrad.BPSpillGeneral}, bei welcher 3 Jahre nach der Explosion weiterhin Rekordzahlen von Delphinen und Wasserschildkröten starben \cite{SIMR.CH2-motorwirkungsgrad.BPSpillDeaths}. 
 
 Die Probleme, die durch die Öl-Förderung entstehen enden aber noch nicht hier, denn Öl wird auch immer schwerer zu erreichen. Deshalb müssen Techniken wie Fracking eingesetzt werden, um die letzen Öl-Reserven zwischen den Bohrungen zu fördern, wofür ein Cocktail von für Menschen giftigen und sogar radioaktiven Chemikalien verwendet werden \cite{SIMR.CH2-motorwirkungsgrad.FrackingChemicals}. Es wird geschätzt dass 30-70\% dieses Cocktails wieder an die Oberfläche kommen wird und das Grundwasser verseuchen wird \cite{SIMR.CH2-motorwirkungsgrad.FrackingGroundwater}.
 
-\begin{figure}[!htb]\centering
+\begin{figure}[!h]\centering
 	\includegraphics[width=0.6\textwidth]{images/frackingInfographic}
 	\caption{Fracking in einem Bild erklärt \cite{SIMR.CH2-motorwirkungsgrad.frackingDescription}}\label{Fig:imgFrackingDesc}
 \end{figure}
