--- a/diplomarbeit/sections/ch2_technische_grundlagen/datenmanagement/intro.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/datenmanagement/intro.tex
@@ -1,2 +1,2 @@
 \lfoot{Autor: Daniel Melichar}
-Die Speicherung von Daten ist einer der wichtigsten Anforderungen einer jeden Applikation. Ohne gespeicherte Daten könnten es keine Darstellungen, Analysen, oder Verarbeitung geben. Eine Speicherungsmtehode muss daher sehr sorgfälltig gewählt werden. Im Folgenden sollen verschiedene Systme betrachtet werden, die für die Datenhaltung im Projekt evaluiert wurden.
+Die Speicherung von Daten ist eine der wichtigsten Anforderungen einer jeden Applikation. Ohne gespeicherte Daten können keine Darstellungen, Analysen, oder Verarbeitung geben. Eine Speicherungsmethode muss daher sehr sorgfälltig gewählt werden. Im Folgenden sollen verschiedene Systme betrachtet werden, die für die Datenhaltung im Projekt relevant sind.
