--- a/diplomarbeit/sections/ch3_implementierung/carpc.tex
+++ b/diplomarbeit/sections/ch3_implementierung/carpc.tex
@@ -37,7 +37,7 @@ Der RED Brick von Tinkerforge ist ein Single-Board PC mit vielen Funktionen.
 Mithilfe des RED Bricks ist es möglich andere Bricklets der Firma über eine proprietäre schnittstelle anzusteuern und somit Daten auszulesen.
 Mit dieser Lösung ist es also möglich ein „Temperatur“ und ein „Beschleunigungs-Bricklet“ an den RED Brick anzuschließen und somit alle notwendigen Daten der Fahrt speichern.
 Er ünterstützt außerdem ein breites Spektrum an Programmiersprachen.
-[Quelle: https://www.tinkerforge.com/de/shop/bricks/red-brick.html]
+[Quelle: \url{https://www.tinkerforge.com/de/shop/bricks/red-brick.html}]
 
 \item Ansatz 2: Raspberry PI 2 Modell B
 Der Raspberry PI 2B ist das Modell der jüngsten Generation des Raspberry PI. Er besitzt einen 900MHz quad-core Prozessor und 1 Gigabyte RAM. Darüber hinaus hat er 4 USB Ports und einen HDMI Anschluss. Durch seine 40 GPIO pins ist es möglich über i²C jeden damit kompatiblen Sensor anzuschließen und somit die benötigten Daten der Fahrt zu speichern.
@@ -55,9 +55,9 @@ Der Raspberry PI 2B besitzt 4 USB Ports. Mithilfe dieser Ports ist es möglich B
 \textbf{Wirtschaftlichkeit\newline}
 \newline
 Der Raspberry PI 2B kostet EUR 34,99 bei einem offiziellen Anbieter der Firma.
-https://www.element14.com/community/community/raspberry-pi
+\url{https://www.element14.com/community/community/raspberry-pi}
 Der Preis des „RED Brick“ beträgt EUR 69,99 beim Anbieter direkt.
-https://www.tinkerforge.com/de/shop/bricks.html
+\url{https://www.tinkerforge.com/de/shop/bricks.html}
 Das bedeutet der Raspberry PI 2B ist um fast die Häfte günstiger als der RED Brick, und aufgrund der
 Modularität des Raspberry PI können auch billigere Sensoren verwendet werden als beim tinkerforge
 RED Brick.
