--- a/diplomarbeit/sections/ch4_wirtschaftlichkeit/main.tex
+++ b/diplomarbeit/sections/ch4_wirtschaftlichkeit/main.tex
@@ -1,5 +1,39 @@
 \section{Wirtschaftlicher Nutzen}
 \label{sec:wirt}
 
-\input{sections/ch4_wirtschaftlichkeit/vermarktung.tex}
-\input{sections/ch4_wirtschaftlichkeit/kunden.tex}
+Das Projekt BestShift deckt einen neuen Markt ab und hat großes Verkaufspotential, da es kein vergleichbares System gibt (siehe Sektion 1). Durch die Anbindung des Systems an sozialle Medien wird dem Verwender die Möglichkeit geboten Analysen und Darstellungen von Fahrten auf gängigen Plattformen wie Facebook oder Twitter zu posten. Wir prognostizieren, dass dadurch die Bekanntheit des Projekts gesteigert wird und mehr Leute zur Verwendnug gebracht werden. 
+
+Das Projekt an sich ist nicht nur für Einzelpersonen gedacht, sondern auch für alle Transport und Logistik Unternehmen
+
+\subsection{Szenario 1: Fahrschulen}
+Ein Mehrwert an unserem Produkt könnten Fahrschulen haben. Wir bieten Fahrschulen
+Lizenzen zur Nutzung für einen Fahrschüler/einer Fahrschülerin. Die Lizenz wird bei der Einschreibung des
+Schülers/der Schülerin in die Fahrschule erstellt und freigegeben. Dieser/Diese kriegt während seiner
+Fahrstunden ein Objektives Feedback, welches in manchen Situationen sinnvoller ist,
+als wenn die Person Feedback von dem Fahrlehrer/der Fahrlehrerin kriegt.
+Im Nachhinein kann auf der BestShift Webapplikation genauer nachgesehen werden,
+um genau den Lerneffekt imstande zu halten und genauer zu analysieren, was genau
+das Fehlverhalten des Fahrschülers war.
+Da der Empfänger den Inhalt der Nachricht bestimmt, kann die Meinung des Lehrbeauftragten
+Falsch aufgenommen werden. Hier ist es besonders wichtig, ein stabiles Fundament für 
+effizientes und umweltschonendes Fahren zu legen. 
+
+
+\subsection{Szenario 2: Speditionen}
+Bei Speditionsfirmen ist es besonders wichtig, den Verbrauch von Fossilen Brennstoffen gering zu halten, um
+im Endeffekt eine größere Gewinnspanne zu erzielen. Allerdings sind LastkraftfahrerInnen äußerst Erfahren und
+sollten kein Feedbacksystem oder einen Gangschaltvorschlag benötigen. Die Verbrauchsanalyse von BestShift ist hierbei
+das Interessante.
+
+
+\subsection{Szenario 3: Taxiunternehmen}
+Für Taxiunternehmen ist BestShift optimal. Die Verbrauchsanalyse ist von vornhinein schon für Kurzfahrtstrecken
+konzipiert. Der Schaltvorschlag ist für anfangende TaxifahrerInnen ebenfalls wichtig.
+Das wichtigste Feature ist allerdings der Fahrgastkomfort, welcher anzeigt mit welcher Stärke der Passagier
+im inneren des Kraftfahrzeugs hin und her geschleudert wird. Indem der Kamm'sche Kreis von BestShift keine 
+extraordinären Ausschläge anzeigt, bedeutet es, dass der Lenker eine ausgezeichnete Leistung erbracht hat.
+Starke Brems/Beschleunigungsmanöver oder zu schnell in die Kurve gefahren? Diese Faktoren spielen
+für den Komfort des Kunden eine große Rolle. Ein Taxiunternehmen könnte auch ein Rating-System auf unserer
+Webapplikation benötigen, um zu zeigen wer der bequemste Lenker des Unternehmens ist.
+Die Social-Media anbindung von BestShift ermöglicht Kunden des Taxiunternehmen ebenfalls, ihren Lenkern oder
+Lenkerinnen eine Benotung zu geben. 
