--- a/diplomarbeit/sections/ch3_implementierung/web-app/evaluierung.tex
+++ b/diplomarbeit/sections/ch3_implementierung/web-app/evaluierung.tex
@@ -4,7 +4,7 @@
 Die Technologien und Konzepte der Web-Applikation sollen den benötigten Aufwand bei Weiterentwicklung der Applikation, sowie beim hinzufügen von neuen Features, möglichst reduzieren. Grundsätzlich besteht jegliche Website (bei Web2.0 \cite{MELD.CH3-web-app.web2}) aus den folgenden Technologien.
 
 \begin{description}
-\item[HTML Markup \newline] definiert den Inhalt eines Dokuments und gibt eine Struktur vor mittels dem Einsatz von Sektionen, Überschriften, Paragraphe, Listen, Menüs, und Formulare \cite{MELD.CH3-web-app.html}.
+\item[HTML Markup \newline] \label{html} definiert den Inhalt eines Dokuments und gibt eine Struktur vor mittels dem Einsatz von Sektionen, Überschriften, Paragraphe, Listen, Menüs, und Formulare \cite{MELD.CH3-web-app.html}.
 
 Eine konsequente, saubere, und ersichtliche Struktur ist wichtig da durch den Einsatz von Ankern \textit{(engl.: Hooks)} die weitere Verarbeitung durch CSS und JavaScript passiert. Die Struktur hat auch eine große Wirkung auf die Flexibilität und zuverlässige Bereitstellung der Website.
 
@@ -79,15 +79,9 @@ Für die konkrete Umsetzung einer Web-Applikation wird in den meisten Fällen ei
 \caption{Angular 2.0 - \url{https://angular.io/}}
 \end{table}
 
-\textbf{Angular 2.0} ist ein Framework, welches dabei helfen soll, Client Applikationen in HTML und JavaScript zu entwickeln. Das Framework an sich besteht aus mehreren kooperierenden Libaries. Für die Erstellung einer Angular Applikation müssen so gennante HTML \textit{templates} im Angular-Stil erstellt werden, einige \textit{component} Klassen welche die templates managen dazu einbinden, und die Logik hinter der Applikation in so gennanten \textit{services}, beschreiben \cite{MELD.CH3-web-app.angular}. Für eine Beschreibung zur Architektur, siehe Abbildung \ref{fig:angulararch}
+\textbf{Angular 2.0} ist ein Framework, welches dabei helfen soll, Client Applikationen in HTML und JavaScript zu entwickeln. Das Framework an sich besteht aus mehreren kooperierenden Libaries. Für die Erstellung einer Angular Applikation müssen so gennante HTML \textit{templates} im Angular-Stil erstellt werden, einige \textit{component} Klassen welche die templates managen dazu einbinden, und die Logik hinter der Applikation in so gennanten \textit{services}, beschreiben \cite{MELD.CH3-web-app.angular}. Für eine Beschreibung zur Architektur, siehe Abbildung \ref{fig:angulararch}.
 
-\begin{figure}[!htb]\centering
-	\includegraphics[width=0.8\textwidth]{images/angular}
-	\caption{Angular Architektur \cite{MELD.CH3-web-app.angular}}
-	\label{fig:angulararch}
-\end{figure}
-
-
+\clearpage
 
 \begin{table}[!htb]
 \centering
@@ -107,14 +101,7 @@ Für die konkrete Umsetzung einer Web-Applikation wird in den meisten Fällen ei
 \caption{Ember 2.0 \url{http://emberjs.com/}}
 \end{table}
 
-\textbf{Ember.js 2.0} ähnelt sehr stak dem Angulars Architektur Konzept. Der Grund wieso wir uns Ember nicht verwenden basiert auf der simpleren, etwas schöneren API von Angular, und den Fakten, dass Angular keine weiteren Dependencies hat (Ember.js verwendet jQuery und Handlebars) und dass Angular eine viel geringere Filegröße hat \cite{MELD.CH3-web-app.ember}.
-
-\begin{figure}[!htb]\centering
-	\includegraphics[width=0.6\textwidth]{images/ember}
-	\caption{Ember Architektur \cite{MELD.CH3-web-app.ember}}
-\end{figure}
-
-\clearpage
+\textbf{Ember.js 2.0} ähnelt sehr stak dem Angulars Architektur Konzept. Ember unterliegt aber eingigen Nachteilen: die simplere, etwas schöneren API von Angular, und dem Fakt, dass Angular keine weiteren Dependencies hat (Ember.js verwendet jQuery und Handlebars) und daher eine viel geringere Filegröße hat \cite{MELD.CH3-web-app.ember}. Für eine Graphik der Ember Architektur, siehe Abb. \ref{fig:emberarch}.
 
 \begin{table}[!htb]
 \centering
@@ -134,11 +121,28 @@ Für die konkrete Umsetzung einer Web-Applikation wird in den meisten Fällen ei
 \caption{React 1.0 \url{https://facebook.github.io/react/}}
 \end{table}
 
-Das von Facebook entwickelte \textbf{React.js} ist ein eher spezielles Framework, oftmals wird gesagt, dass React.js das \textbf{V} im MVC-Konzept (Model-View-Control) da bietet. Aufgrund dessen ist die Filegröße des Frameworks um einiges kleiner als bei den anderen beiden, bietet aber dennoch viele der Basis Features an \cite{MELD.CH3-web-app.react}. Leider bietet React nicht alles an was für unsere Applikation benötigt wird, daher ging es rasch aus der ängeren Auswall raus.
+Das von Facebook entwickelte \textbf{React.js} ist ein eher spezielles Framework, oftmals wird gesagt, dass React.js das \textbf{V} im MVC-Konzept (Model-View-Control) da bietet. Aufgrund dessen ist die Filegröße des Frameworks um einiges kleiner als bei den anderen beiden, bietet aber dennoch viele der Basis Features an \cite{MELD.CH3-web-app.react}. Leider bietet React nicht alles an was für unsere Applikation benötigt wird, daher ging es rasch aus der ängeren Auswall raus. Für eine Graphik der React Architektur, siehe Abb. \ref{fig:reactarch}.
 
-\begin{figure}[!htb]\centering
-	\includegraphics[width=0.8\textwidth]{images/react}
-	\caption{React Architektur \cite{MELD.CH3-web-app.react}}
+\begin{figure}[!tbp]
+ 	\centering
+ 	\begin{minipage}[b]{0.8\textwidth}
+ 		\centering
+ 		\includegraphics[width=0.8\textwidth]{images/angular}
+		\caption{Angular Architektur \cite{MELD.CH3-web-app.angular}}
+		\label{fig:angulararch}
+ 	\end{minipage}
+ 	\hfill
+ 	\begin{minipage}[b]{0.8\textwidth}
+ 		\centering
+ 		\includegraphics[width=0.8\textwidth]{images/ember}
+		\caption{Ember Architektur \cite{MELD.CH3-web-app.ember}}
+		\label{fig:emberarch}
+ 	\end{minipage}
+ 	\hfill
+ 	\begin{minipage}[b]{0.7\textwidth}
+ 		\centering
+		\includegraphics[width=0.7\textwidth]{images/react}
+		\caption{React Architektur \cite{MELD.CH3-web-app.react}}
+		\label{fig:reactarch}
+ 	\end{minipage}
 \end{figure}
-
-\clearpage
