--- a/diplomarbeit/sections/ch3_implementierung/web-app/standards.tex
+++ b/diplomarbeit/sections/ch3_implementierung/web-app/standards.tex
@@ -1,7 +1,6 @@
-\subsubsection{Code Standards und Guidelines}
-\lfoot{Daniel Melichar}
-
-Für den weiteren Verlauf des Web-App mussten gewisse Standards für den Code gesetzt werden, damit alle auf die selbe Art und Weise programmieren. Das Ziel dieses Style Guides ist, eine Sammlung von Best Practices und Gestaltungsrichtlinien für AngularJS-Anwendungen aufzuzeigen. Sie wurden aus den folgenden Quellen zusammengestellt:
+\subsubsection{Entwicklungsumgebung und Code Guidelines}
+\lfoot{Autor: Daniel Melichar}
+Für den weiteren Verlauf der Web-Applikation musste eine effiziente Umgebung erstellt werden, welche die Entwickler bestmöglich unterstüzt. Die Umgebung musste automatisiert, nachhaltig, einfach zu verstehen und konfigurierbar sein. Zusätzlich dazu, mussten Standards für den Code gesetzt werden, damit alle auf die selbe Art und Weise programmieren, um eine schnelle Umsetzung zu ermöglichen. Das Ziel dieses Style Guides ist, eine Sammlung von Best Practices und Gestaltungsrichtlinien für AngularJS-Anwendungen aufzuzeigen. Sie wurden aus den folgenden Quellen zusammengestellt:
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -10,7 +9,7 @@ Für den weiteren Verlauf des Web-App mussten gewisse Standards für den Code ge
 \item Erfahrung des Teams und Lehrer
 \end{enumerate}
 
-Für allgemeinen Richtlinien der JavaScript-Entwicklung sollte man folgende Guides begutachten:
+Für allgemeine Richtlinien der JavaScript-Entwicklung sollte man folgende Guides begutachten:
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -21,55 +20,20 @@ Für allgemeinen Richtlinien der JavaScript-Entwicklung sollte man folgende Guid
 \item \href{https://github.com/airbnb/javascript}{Airbnb JavaScript-Style-Guide}
 \end{enumerate}
 
-Automatisierung des Workflows durch: 
+Die Umsetzung einer Applikation für das Web kann sehr schnell komplex werden. Mit einigen Development-Tools soll die Komplexität der Umsetzung auf ein absolutes Minimum reduziert werden und das Team damit möglichst effizient arbeiten können. Da eine große AngularJS-Anwendung viele Komponenten hat, sollten diese mit Hilfe einer Verzeichnishierarchie strukturiert werden. Auf einer oberen Ebene eine Aufteilung nach Art der Komponenten und auf einer tieferen Ebene eine Aufteilung nach Funktionalität. Die verwendeten Tools der Web-Applikation sind:
+
 \begin{enumerate}
-\item Yeoman - \url{http://yeoman.io}
-\item Grunt - \url{http://gruntjs.com}
-\item Bower - \url{http://bower.io}
+\item \textbf{GitHub} (\url{http://github.com}) ist ein Versionierungstool mit welchem die Problematik der Zusammenarbeit von mehreren Personen auf den selben Dateien gelöst wird.
+\item \textbf{Grunt} (\url{http://gruntjs.com}) ist ein so gennanter \textit{Task-Manager}. Mittels diesem Tool können gewisse Operationen automatisiert durchgeführt werden - z.B. Rechtschreibprüfung, starten eines lokalen Servers, minimierung von Code auf das Notwendigste.
+\item \textbf{Bower} (\url{http://bower.io}) ist ein so gennantes \textit{Dependency-Management-Tool}. Prinzipiell ermöglichst es, die benötigte Software zu verwalten, installieren und automatisieren.
 \end{enumerate}
 
-\clearpage
-
-\textbf{Verzeichnisstruktur\newline}
-Da eine große AngularJS-Anwendung viele Komponenten hat, sollten diese mit Hilfe einer Verzeichnishierarchie strukturiert werden. Auf einer oberen Ebene eine Aufteilung nach Art der Komponenten und auf einer tieferen Ebene eine Aufteilung nach Funktionalität.
-
-Die Verzeichnisstruktur wird in diesem Fall folgendermaßen aussehen:\newline
-
-\dirtree{%
-.1 app .
-.2 app.js .
-.2 controllers .
-.3 page1 .
-.4 FirstCtrl.js .
-.4 SecondCtrl.js .
-.3 page2 .
-.4 ThirdCtrl.js .
-.2 directives .
-.3 page1 .
-.4 directive1.js .
-.3 page2 .
-.4 directive2.js .
-.4 directive3.js .
-.2 filters .
-.3 page1 .
-.3 page2 .
-.2 services .
-.3 CommonService.js .
-.3 cache .
-.4 Cache1.js .
-.4 Cache2.js .
-.3 models .
-.4 Model1.js .
-.4 Model2.js .
-.1 partials .
-.1 lib .
-.1 test .
-}
+\todo{MELD: From here, redo}
 
 \clearpage
 
 \textbf{Markup\newline}
-Auch der HTML-Markup ist wichtig und sollte in einem Team so geschrieben werden, als sei sie von derselben Person. Scripts sollten am Ende einer Seite eingefügt werden.
+Der HTML-Markup ist wichtig (siehe Sektion \ref{html}) und sollte in einem Team so geschrieben werden, als sei sie von derselben Person. Für die Implementierung mittels der AngularJS Templates sollte folgende Struktur in Betracht gezogen werden.
 
 \begin{lstlisting}
 <!DOCTYPE html>
@@ -102,11 +66,13 @@ Um den Code nicht unnötig zu verkomplizieren, fügt man AngularJS-spezifische D
 
 \textbf{Namensgebung\newline}
 
+Für die einzelnen Referenzen gibt es Vorschriften, welche beschreiben, wie die Referenz aussehen soll.
+
 \begin{tabular}{|l|l|l|l|}
 \hline
 \textbf{Element} & \textbf{Style} & \textbf{Beispiel} & \textbf{Verwendung bei} \\ \hline
 Module & lowerCamelCase & angularApp &  \\ \hline
-Controller & funktionalität + \'Ctrl\' & adminCtrl &  \\ \hline
+Controller & funktionalität + Ctrl & adminCtrl &  \\ \hline
 Direktiven & lowerCamelCase & userInfo &  \\ \hline
 Filter & lowerCamelCase & userFilter &  \\ \hline
 Services & UpperCamelCase & User & Konstruktor \\ \hline
@@ -114,13 +80,13 @@ Services & lowerCamelCase & dataFactory & sonstige \\ \hline
 \end{tabular}
 
 \textbf{Module\newline}
-Module sollten in lowerCamelCase benannt werden. Um deutlich zu machen, dass das Modul \textit{b} ein Untermodul von \textit{a} ist, kannst man sie durch Namespaces verschachteln, z. B.: \textit{a.b}.
+Module sollten in \textit{lowerCamelCase} benannt werden. Um deutlich zu machen, dass das Modul \textit{b} ein Untermodul von \textit{a} ist, können sie durch Namespaces verschachteln werden, z. B.: \textit{a.b}.
 
 Es gibt zwei verbreitete Wege, nach denen Module strukturiert werden können: Nach Funktionalität
 oder nach Typ der Komponente. Derzeit gibt es keinen großen Unterschied, aber die erste Variante sieht sauberer aus. Außerdem wird - wenn lazy-loading für die Module implementiert ist - die Performance der verbessert.
 
 \textbf{Services\newline}
-Dieser Abschnitt enthält Informationen über AngularJS' Service-Komponente. Er bezieht sich nicht auf eine spezielle Definitionsweise (d.h. als Provider, Factory oder Service), falls nicht ausdrücklich genannt.
+Dieser Abschnitt enthält Informationen über die AngularJS Service-Komponente. Er bezieht sich nicht auf eine spezielle Definitionsweise (d.h. als Provider, Factory oder Service), falls nicht ausdrücklich genannt.
 
 Services in camelCase benennen, bzw UpperCamelCase (PascalCase), um Services zu benennen, die als Konstruktoren verwendet werden, d.h.:
 
@@ -137,7 +103,7 @@ module.factory('User', function () {
 });
 \end{lstlisting}
 
-Alle anderen Service in lowerCamelCase benennen. Kapsle die gesamte Anwendungslogik in Services.Services, die eine bestimmte Domäne abbilden, sollten bevorzugt als \textit{service} statt als \textit{factory} geschrieben werden. Auf diese Weise können die Vorteile der klassischen Vererbung einfacher genutzt werden:
+Alle anderen Service in \textit{lowerCamelCase} benennen. Kapslung der gesamte Anwendungslogik in Services beachten. Services, die eine bestimmte Domäne abbilden, sollten bevorzugt als \textit{service} statt als \textit{factory} geschrieben werden. Auf diese Weise können die Vorteile der klassischen Vererbung einfacher genutzt werden:
 
 \begin{lstlisting}[language=JavaScript]
 function Human() {
@@ -159,7 +125,7 @@ myModule.service('Human', Human);
 myModule.service('Developer', Developer);
 \end{lstlisting}
 
-Für einen sitzungsbezogenen Cache kannst du \textit{\$cacheFactory} verwenden. Diesen sollte man nutzen, um die Ergebnisse von Anfragen oder aufwändigen Berechnungen zwischenzuspeichern.Falls ein Service konfiguriert werden muss, definirt man ihn als Provider und konfiguriert im \textit{config}-Callback, wie hier:
+Für einen sitzungsbezogenen Cache kannst du \textit{\$cacheFactory} verwenden. Diesen sollte man nutzen, um die Ergebnisse von Anfragen oder aufwändigen Berechnungen zwischenzuspeichern.Falls ein Service konfiguriert werden muss, definiert man ihn als Provider und konfiguriert im \textit{config}-Callback, wie hier:
 
 \begin{lstlisting}[language=JavaScript]
 angular.module('demo', [])
