--- a/diplomarbeit/sections/ch3_implementierung/fahrkomfortanalyse.tex
+++ b/diplomarbeit/sections/ch3_implementierung/fahrkomfortanalyse.tex
@@ -4,11 +4,11 @@
 
 
 Autofahrten werden durch die Bequemlichkeit der Fahrt bewertet. 
-Diese Bewertung fällt meistens aus den Faktoren wie stark ein Fahrer beschleunigt und in welcher Geschwindigkeit er um eine Kurve fährt. Eine Fahrt kann durch starke Beschleunigungen - verursacht durch zu  starkes Gas-geben oder Bremsen, als auch Kurvenfahrten mit zu hoher Geschwindigkeit - unbequem werden. Um Fahranfängern Informationen über ihre Fahrtverläufe zu geben, werden in diesem Projekt Beschleunigungswerte in der Fahrzeuglängs- und querachse ermittelt und gespeichert (siehe dazu auch Kapitel … *Car-PC*). Für eine übersichtliche Darstellung der gesammelten Daten wurde der Kammsche Kreis gewählt.
+Die Bewertung der Bequemlichkeit fällt meistens aus den Faktoren wie stark ein Fahrer beschleunigt und in welcher Geschwindigkeit er um eine Kurve fährt. Eine Fahrt kann durch starke Beschleunigungen - verursacht durch zu  starkes Gas-geben oder Bremsen, als auch Kurvenfahrten mit zu hoher Geschwindigkeit - unbequem werden. Um Fahranfängern Informationen über ihre Fahrtverläufe zu geben, werden in diesem Projekt Beschleunigungswerte in der Fahrzeuglängs- und querachse ermittelt und gespeichert (siehe dazu auch Kapitel \ref{subsec:Einleitung). Für eine übersichtliche Darstellung der gesammelten Daten wurde der Kammsche Kreis gewählt.
 
 
 
-Jetzt ein wenig Text zum Hr. Kamm und warum dieser Darstellung gut ist und wie sie zu lesen ist
+
 
 \subsubsection{Kammscher Kreis }
 Ein Kammscher Kreis ist ein Kreisdiagramm, in dem die Richtung und der Betrag der Fahrzeugbeschleunigungen aufgetragen sind zur Fahrzeugrichtung, da die Beschleunigungskräfte in die entsprechenden Richtung wirken.
@@ -21,12 +21,12 @@ Es ist also alles verkehrt.
 
 \subsubsection{Implementierung}
 
-Bei der Umsetzung des Kammschen Kreisdiagrammes habe ich erstmal die MPAndroidchart Libary verwendet.Da aber der Kammsche Kreis sich nicht mithilfe der Libary aktualisieren ließ wurde schnell die Lösung mittels canvas erstellt. 
+Bei der Umsetzung des Kammschen Kreisdiagrammes wurde erstmal die MPAndroidchart Libary verwendet.Da aber der Kammsche Kreis sich nicht mithilfe der Libary aktualisieren ließ wurde schnell die Lösung mittels canvas erstellt. 
 
 Bei canvas ist es so, dass die onDraw Methode überschrieben werden muss um auf einer Fläche zeichnen zu können. Weiters habe ich mir eine Näherungsmethode erstellt womit ich die Punkte in 5er Winkel auf oder abrunde.
 
 
 \lstinputlisting[caption=Runden-Methode, style=javastyle]{code/Runden.java}
 
-\lstinputlisting[caption=Draw, style=javastyle]{code/ChartView.java}
+\lstinputlisting[caption=Erstellung des Kammschen Kreises, style=javastyle]{code/ChartView.java}
 
